--- a/Home.css
+++ b/Home.css
@@ -2,7 +2,7 @@ body {font-family: "Lato", sans-serif;
 padding: 0;
 margin: 0;
 
-background-image: url('/didar html/project 5/Necessary Photo/office/a (1).jpg');
+background-image: url('/Necessary Photo/office/a (1).jpg');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
