--- a/Home.css
+++ b/Home.css
@@ -2,11 +2,7 @@ body {font-family: "Lato", sans-serif;
 padding: 0;
 margin: 0;
 
-<<<<<<< HEAD
-background-image: url('/GitHub/dElevan.mOct.com/Necessary Photo/office/a (1).jpg');
-=======
-background-image: url('/Necessary Photo/office/a (1).jpg');
->>>>>>> 88b23ccda80f49f08254dfe862e8524ed5546a12
+background-image: url('/Users/Didar/Documents/GitHub/dElevan.mOct.com/Necessary Photo/Office/a (1).jpg');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
@@ -25,7 +21,6 @@ cursor: none;
   padding: 7px 7px;
   font-size: 14px;
   width: 20%;
- 
  
 }
 
